Avoids in trigger detail info hides behind the main panel

--- a/src/client/app/flogo.form-builder.configuration.trigger/components/form-builder.configuration.trigger.less
+++ b/src/client/app/flogo.form-builder.configuration.trigger/components/form-builder.configuration.trigger.less
@@ -1,11 +1,10 @@
 .flogo-common-edit-panel-info {
-  display: inline-block;
   position: relative;
   text-transform: none;
+  float: right;
 
   .flogo-common-edit-panel-info__btn {
     cursor: help;
-    display: inline-block;
     height: 14px;
     width: 14px;
     margin-left: 5px;
